--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     background-color: GhostWhite;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
 
 .header {
@@ -9,7 +10,7 @@ body {
     padding: 5px;
     display: flex;
     align-items: center;
-    transition: 0.2s;
+    transition: 0.12s;
 }
 
 .header h2 {
@@ -23,13 +24,12 @@ body {
 }
 
 .header a {
-    font-size: 18px;
     font-weight: bold;
     color: white;
     text-decoration: none;
     padding: 3px;
     margin-right: 15px;
-    transition: 0.2s;
+    transition: 0.12s;
 }
 
 .header a:hover {
@@ -37,4 +37,11 @@ body {
     border-radius: 5px;
     color: rgb(0, 10, 200);
     text-decoration: underline;
+}
+
+@media screen and (max-width:600px) {#color-display {
+    .header a {
+        margin-left: 15px;
+        padding: 2px;
+    }
 }
