--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 
 .header {
     background-color: rgba(45, 150, 45);
-    padding: 5px;
+    padding: 4px 20px;
     display: flex;
     align-items: center;
     transition: 0.12s;
@@ -27,19 +27,18 @@ body {
     font-weight: bold;
     color: white;
     text-decoration: none;
-    padding: 3px;
-    margin-right: 15px;
+    padding: 6px;
+    margin-right: 16px;
     transition: 0.12s;
 }
 
 .header a:hover {
-    box-shadow: 0 0 3px rgba(0, 0, 0);
-    border-radius: 5px;
+    box-shadow: 0 0 2px rgba(0, 0, 0);
+    border-radius: 6px;
     color: rgb(0, 10, 200);
-    text-decoration: underline;
 }
 
-@media screen and (max-width:600px) {#color-display {
+@media screen and (max-width: 600px) {
     .header a {
         margin-left: 15px;
         padding: 2px;
