--- a/index.css
+++ b/index.css
@@ -39,6 +39,9 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+    .header {
+        padding: 4px 6px;
+    }
     .header a {
         margin-left: 15px;
         padding: 2px;
