--- a/index.css
+++ b/index.css
@@ -35,16 +35,24 @@ body {
 .header a:hover {
     box-shadow: 0 0 2px rgba(0, 0, 0);
     border-radius: 6px;
-    color: rgb(0, 10, 200);
+    color: #000bd3;
 }
 
 @media screen and (max-width: 600px) {
     .header {
-        padding: 4px 6px;
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .header .menu {
+        margin-left: 0;
+        margin-top: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     .header a {
-        margin-left: 16px;
-        padding: 2px;
+        margin: 6px;
+        padding: 6px 10px;
     }
 }
