--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@ body {
 }
 
 .header {
-    background-color: rgba(45, 150, 45);
-    padding: 4px 20px;
+    background-color: rgba(45, 150, 45, 1);
+    padding: 10px 20px;
     display: flex;
     align-items: center;
     transition: 0.12s;
@@ -16,10 +16,13 @@ body {
 .header h2 {
     font-size: 22px;
     cursor: pointer;
+    margin: 0;
+    color: white;
 }
 
 .header .menu {
     display: flex;
+    gap: 16px;
     margin-left: auto;
 }
 
@@ -27,14 +30,13 @@ body {
     font-weight: bold;
     color: white;
     text-decoration: none;
-    padding: 6px;
-    margin-right: 16px;
+    padding: 8px 12px;
+    border-radius: 6px;
     transition: 0.12s;
 }
 
 .header a:hover {
-    box-shadow: 0 0 2px rgba(0, 0, 0);
-    border-radius: 6px;
+    box-shadow: 0 0 3px rgba(0, 0, 0);
     color: #000bd3;
 }
 
