--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: GhostWhite;
+    background-color: #f2f2f2;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
