--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 }
 
 .header {
-    background-color: rgba(45, 150, 45, 1);
+    background-color: #279036;
     padding: 10px 20px;
     display: flex;
     align-items: center;
@@ -35,7 +35,7 @@ body {
 }
 
 .header a:hover {
-    box-shadow: 0 0 3px rgba(0, 0, 0);
+    box-shadow: 0 0 3px black;
     color: #000bd3;
 }
 
