--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     background-color: #ffffff;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 18px;
 }
 
